samples/_failures_safe/1761487023_341012_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_588a30e5.c: In function ‘main’:
./samples/SAFE/__tmp_588a30e5.c:154:17: error: expected expression at end of input
  154 |                 } else
      |                 ^
./samples/SAFE/__tmp_588a30e5.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_588a30e5.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_588a30e5.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_588a30e5.c:154:17: error: expected declaration or statement at end of input
